feat: Spiked bounce component animation

--- a/packages/treyflipped-button/demo/index.html
+++ b/packages/treyflipped-button/demo/index.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         <script type="text/javascript" src="bundle.js"></script>
-        <x-hello name="Blah">Hello, Blah!!</x-hello>
+        <x-hello name="Blah"><span>Hello, Blah!!</span></x-hello>
     </body>
 </html>
