fix: spike webanimations-js polyfill and react integration
affects: atlas-animation3

--- a/packages/atlas-animation3/demo/index.html
+++ b/packages/atlas-animation3/demo/index.html
@@ -8,6 +8,6 @@
         <x-hello name="Blah"><span>Hello, Blah!!</span></x-hello>
         <br>
         <div style="border: 1px solid; width: 200px; height: 40px; margin-top: 100px; display: inline-block" id="box2">A normal HTML element</div>
-        <bounce-box style="display: inline-block"></bounce-box>
+        <div id="reactContainer" style="display: inline-block"></div>
     </body>
 </html>
